# meshflow

./: .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.mcp  GOVERNANCE.md  LICENSE  Makefile  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  competitive_analysis_gold_standard.docx  docker-compose.yml  mcp.json  meshflow.code-workspace  meshflow.policy.yaml  mkdocs.yml  pyproject.toml  smithery.yaml  test_integration.py  test_telemetry.py
.claude/: settings.json
.claude/agents/: meshflow-builder.md  meshflow-compliance.md  meshflow-debugger.md  meshflow-test-writer.md  meshflow-workflow-architect.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  branch-protection.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  compliance_gap.yml  config.yml  feature_request.yml
.github/scripts/: sync-labels.sh
.github/workflows/: ci.yml  cost-regression.yml  publish-docker.yml  publish-forensic.yml  publish-java.yml  publish-npm.yml  publish-rust.yml  release.yml  zt-gate.yml
benchmarks/: README.md  bench_core.py  bench_zt_overhead.py  competitive_bench.py  memory_leak_test.py  profile_startup.py
dashboard/: app.py
dashboard/realtime/: index.html  style.css
dashboards/: grafana-meshflow.json
docs/: GAP_REMEDIATION_PLAN.md  QUICKSTART.md  audit_chain_spec.md  cli.md  configuration.md  golden-standard-platform.md  index.md  installation.md  publishing_checklist.md
docs/advanced/: code-interpreter.md  finetune-export.md  marketplace.md  multimodal.md  plugins.md  swarm.md
docs/agents/: advisor.md  building.md  compactor.md  groupchat.md  prebuilt.md  react.md  streaming.md  teams.md  tool-streaming.md
docs/analyst_briefing/: competitive_positioning.md  executive_summary.md  use_cases.md
docs/api/: agents.md  core.md  eval.md  governance.md  meshflow.md
docs/aws_marketplace/: cloudformation.yaml  iam_policy.json  listing.md
docs/community/: discord_announcement.md  discord_setup.md  launch_checklist.md  meshflow_sessions.md
docs/compliance/: FEDRAMP_CONTROLS_MAPPING.md  GDPR_GUIDE.md  HIPAA_GUIDE.md  ISO27001_CONTROLS_MAPPING.md  SOC2_AUDIT_CHECKLIST.md  SOC2_CONTROLS_MAPPING.md  SOC2_READINESS_ASSESSMENT.md
docs/deployment/: case-studies.md  docker.md  doctor.md  env-generator.md  kubernetes.md  serving.md
docs/eval/: ab-testing.md  baselines.md  conversation.md  judge.md  quality-gate.md  running.md
docs/fundraising/: pitch_materials.md
docs/governance/: audit.md  budgets.md  compliance.md  guardrails.md  overview.md  policy.md  sla.md  snapshots.md  tenants.md  vault.md
docs/integrations/: a2a.md  adapters.md  haystack.md  mcp.md  mcp_clients.md  typescript-sdk.md
docs/launch/: blog_post.md  devto_post.md  flowise_rce_deepdive.md  linkedin_post.md  product_hunt.md  reddit_launch.md  reddit_posts.md  show_hn.md  skill_prs.md  twitter_thread.md
docs/memory/: cross-session.md  four-tier.md  knowledge.md  rag.md  semantic.md
docs/migration/: autogen-to-meshflow.md  flowise-to-meshflow.md
docs/observability/: metrics.md  projections.md  studio.md  tracing.md  webhooks.md
docs/orchestration/: durable.md  dynamic-workflow.md  flows.md  hitl.md  state-graphs.md  yaml-workflows.md
docs/partnerships/: anthropic_built_with_claude.md  deepset_haystack.md
docs/providers/: batch.md  caching.md  health.md  overview.md  router.md
docs/security/: dasc.md  forensic.md  identity.md  injection.md  secrets.md  sensitive-data.md  soc2-assertion.md  soc2_type2_report.md
docs/submissions/: anthropic_skills_PR.md  openai_skills_PR.md  submit_skills_pr.sh
examples/: __init__.py  adaptive_routing.py  advanced_orchestration_demo.py  basic_mesh.py  cascade_routing.py  cross_framework_demo.py  full_stack_demo.py  hipaa_phi_pipeline.py  legal_critical_contract_review.py  legal_critical_nda_review.py  live_quickstart.py  live_telemetry_demo.py  mixed_model_pipeline.py  multi_framework.py  quickstart.py  real_crewai.py  real_langgraph.py  regulated_financial_review.py  router_config.py  sprint95_features_demo.py  token_optimization_demo.py
helm/meshflow/: Chart.yaml  values.yaml
k8s/: deployment.yaml
k8s/helm/: Chart.yaml  values.yaml
meshflow/: __init__.py  client.py  plugins.py
meshflow/a2a/: __init__.py  client.py  protocol.py  server.py  tasks.py
meshflow/acp/: __init__.py  bridge.py
meshflow/agents/: __init__.py  adaptation.py  adapters.py  adaptive.py  adversarial.py  advisor.py  autogen_v4.py  base.py  batch_completions.py  builder.py  compose.py  context_dedup.py  conversation.py  crew.py  critic.py  debate.py  early_exit.py  handoff.py  healing.py  health.py  library.py  messaging.py  model_router.py  openai_agents.py  pipeline.py  pool.py  providers.py  rag_budget.py  react.py  registry.py  role_router.py  router.py  scoring.py  session.py  skill_registry.py  skills.py  spawnable.py  structured.py  supervisor.py  task.py  (+3 more)
meshflow/alerting/: __init__.py  engine.py  (+2 more)
sdks/rust/: Cargo.toml  README.md
sdks/rust/examples/: quickstart.rs
sdks/rust/src/: client.rs  lib.rs  types.rs  zt_policy.rs
tests/: conftest.py  test_agent_delegation.py  test_agent_platform.py  test_agentic_platform.py  test_async_ledger.py  test_azure_provider.py  test_benchmarks.py  test_builtin_tools.py  test_cloud_reporter.py  test_codegen.py  test_cross_session_memory.py  test_dasc_core.py  test_dataset_hub.py  test_deploy_targets.py  test_developer_experience.py  test_distributed.py  test_docker_interpreter.py  test_durable_hitl.py  test_entity_memory.py  test_eval_cloud.py  test_flows_api.py  test_gap_closures.py  test_gdpr_multitenancy.py  test_golden_standard.py  test_govern.py  test_guardrails_integration.py  test_haystack_integration.py  test_hitl_feedback.py  test_hitl_notifications.py  test_http_proxy.py  test_infrastructure_remediation.py  test_integration.py  test_integration_fixes.py  test_integrations.py  test_ledger_backends.py  test_live.py  test_live_integration.py  test_live_v115.py  test_marketplace.py  test_mcp_client.py  (+124 more)
(+312 files in other folders)
