[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshflow"
version = "0.7.0"
description = "The control plane for multi-agent systems — govern, orchestrate, audit, and standardize LangGraph, CrewAI, AutoGen and native agents under one policy layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "MeshFlow Contributors" }]
keywords = ["agents", "llm", "multi-agent", "orchestration", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "cryptography>=42.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "tiktoken>=0.7.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "cachetools>=5.3.3",
]

[project.optional-dependencies]
forensics = ["meshflow-forensic>=0.1.0"]
full = ["meshflow[forensics]"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
meshflow = "meshflow.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
