[package]
name = "meshflow-sdk"
version = "1.6.0"
edition = "2021"
description = "Async Rust SDK for the MeshFlow multi-agent orchestration platform"
license = "MIT"
repository = "https://github.com/meshflow-ai/meshflow"
keywords = ["meshflow", "ai", "agents", "orchestration", "zero-trust"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"
